# nexuspjllm

./: .gitignore  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: app.py  consulta_nexus.py  ingerir.py  main.py  preprocesar.py
app/utils/: consulta_nexus.py  ingerir.py  logs.py
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: base_api.py
backend/app/chroma_db/: chroma.sqlite3
backend/app/utils/: consulta_nexus.py  logs.py  preprocesar.py
backend/chunks/: chunks50cd6870-0fc3-49a3-899c-26caedd3f712.txt
nexuspj-ui/: Dockerfile  package-lock.json  package.json
nexuspj-ui/services/: api.ts
nexuspj-ui/src/app/: layout.tsx  page.tsx
