[tool.poetry]
name = "nexuspjllm"
version = "0.1.0"
description = ""
authors = ["Euquimides <jcvasquez90@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.8"
llama-index = "^0.12.1"
requests = "^2.32.3"
keybert = "^0.8.5"
chroma = "^0.2.0"
chromadb = "^0.5.20"
llama-index-llms-ollama = "^0.4.1"
llama-index-embeddings-ollama = "^0.4.0"
llama-index-vector-stores-chroma = "^0.4.0"
colorlog = "^6.9.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
